syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.gamayun.proto";
option java_outer_classname = "GamayunResultReporter";
option objc_class_prefix = "GMY";

package gamayun;

// The result service definition.
service Result{
  // Reports the map only result to Gamayun
  rpc ReportResultWithMapOnly (JobResultWithMapOnly) returns (EmptyResponse) {}
  // Reports an error to Gamayun
  rpc ReportError (JobError) returns (EmptyResponse) {}
}

//as maps cannot be repeated, we need to separate a map into a message (which can be repeated)
message MapResult{
  map<string, string> mapResult = 1;
}

// Result containing jobName and map-only results
message JobResultWithMapOnly {
  string name = 1;
  string runId = 2;
  repeated MapResult results = 3;
}

message JobError {
  string name = 1;
  string runId = 2;
  string error = 3;
}

// The empty response
message EmptyResponse {
}